...
    "Continue with Email" : {
      "extractionState" : "stale",
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "メールアドレスで続ける"
          }
        }
      }
    },
    "Continue with Google" : {
      "extractionState" : "stale",
...
